// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/TooltipBase/TooltipBase should renders correctly Timeshow 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "rgba(21, 28, 44, 0.2)",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      },
      [
        {
          "backgroundColor": "transparent",
        },
        undefined,
      ],
    ]
  }
  testID="Pressable"
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "flex-start",
        "backgroundColor": "#20242D",
        "borderRadius": 8,
        "justifyContent": "center",
        "marginVertical": 8,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
        "position": "absolute",
        "right": 32,
        "top": 2411,
        "zIndex": 1,
      }
    }
  />
</View>
`;

exports[`@lad-tech/mobydick-core/TooltipBase/TooltipBase should renders correctly bottom center 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "rgba(21, 28, 44, 0.2)",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      },
      [
        {
          "backgroundColor": "transparent",
        },
        undefined,
      ],
    ]
  }
  testID="Pressable"
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "flex-start",
        "backgroundColor": "#20242D",
        "borderRadius": 8,
        "bottom": -1770,
        "justifyContent": "center",
        "marginVertical": 8,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
        "position": "absolute",
        "zIndex": 1,
      }
    }
  />
</View>
`;

exports[`@lad-tech/mobydick-core/TooltipBase/TooltipBase should renders correctly top end 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "rgba(21, 28, 44, 0.2)",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      },
      [
        {
          "backgroundColor": "transparent",
        },
        undefined,
      ],
    ]
  }
  testID="Pressable"
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "flex-start",
        "backgroundColor": "#20242D",
        "borderRadius": 8,
        "justifyContent": "center",
        "marginVertical": 8,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
        "position": "absolute",
        "right": 32,
        "top": 2411,
        "zIndex": 1,
      }
    }
  />
</View>
`;

exports[`@lad-tech/mobydick-core/TooltipBase/TooltipBase should renders correctly top start 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "rgba(21, 28, 44, 0.2)",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      },
      [
        {
          "backgroundColor": "transparent",
        },
        undefined,
      ],
    ]
  }
  testID="Pressable"
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "flex-start",
        "backgroundColor": "#20242D",
        "borderRadius": 8,
        "justifyContent": "center",
        "left": 287,
        "marginVertical": 8,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
        "position": "absolute",
        "top": 2411,
        "zIndex": 1,
      }
    }
  />
</View>
`;
